force-app/main/default/objects/Webhook__c/Webhook__c.object-meta.xml
<CustomObject>
    <label>Webhook</label>
    <nameField>
        <displayFormat>HK-{0000}</displayFormat>
        <label>Webhook Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Webhooks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>