force-app/main/default/objects/Webhook__c/fields/Enabled_Events__c.field-meta.xml
<CustomField>
    <fullName>Enabled_Events__c</fullName>
    <label>Enabled Events</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>