force-app/main/default/objects/Webhook__c/fields/StripeAccount__c.field-meta.xml
<CustomField>
    <fullName>StripeAccount__c</fullName>
    <label>Stripe Account</label>
    <referenceTo>Stripe_Account__c</referenceTo>
    <relationshipLabel>Webhooks</relationshipLabel>
    <relationshipName>Webhooks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>