force-app/main/default/objects/Webhook__c/fields/WebhookId__c.field-meta.xml
<CustomField>
    <fullName>WebhookId__c</fullName>
    <externalId>true</externalId>
    <label>Webhook Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>